Play and Pause Toggling

--- a/Txly/TxlyPage.xaml
+++ b/Txly/TxlyPage.xaml
@@ -3,7 +3,8 @@
 <StackLayout>
     <Label Text="I can play mp3 file by SimpleAudioPlayer!" />
     <Label x:Name="label1"/>
-    <Label x:Name="label2"/>
+    <!--<Label x:Name="label2"/>-->
+    <Button Text="暫停" x:Name="BtnPause" Clicked="OnBtnPauseClicked" />
     <WebView x:Name="webView" VerticalOptions="FillAndExpand" />
 </StackLayout>
 </ContentPage>
