--- a/Txly/AboutPage.xaml
+++ b/Txly/AboutPage.xaml
@@ -10,8 +10,8 @@
         </Grid.RowDefinitions>
         <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
-                <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
-                    <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
+                <ContentView Padding="0,10,0,10" VerticalOptions="FillAndExpand">
+                    <Image Source="ly_logo.png" VerticalOptions="Center" HeightRequest="40" />
                 </ContentView>
             </StackLayout>
         </StackLayout>
