* Contents.json: Set launch image ly_logo asset
* Info.plist:
* Txly.userprefs:
* Txly.iOS.csproj:
* MainPage.cs:
* TxlyPage.xaml:
* LaunchScreen.storyboard:
* ly_logo.png:
* ly_logo.png:
* ly_logo@2x.png:
* ly_logo@3x.png:
* Contents.json:
* ly_logo@2x.png:
* ly_logo@3x.png:
* splash640x960.png:
* Contents.json:
* Default640x1136Retina4.png:

--- a/Txly/Views/TxlyPage.xaml
+++ b/Txly/Views/TxlyPage.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:Txly" x:Class="Txly.TxlyPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:Txly" x:Class="Txly.TxlyPage" Title="第五空间">
 <StackLayout>
     <Label x:Name="label1"/>
     <!--<Label x:Name="label2"/>-->
